--- a/ps3/style.css
+++ b/ps3/style.css
@@ -17,6 +17,7 @@ body {
 	align-items: center;
 	width: 100vw;
 	height: 100vh;
+	background: url("bg.jpeg") no-repeat fixed center;
 	background-size: cover;
 }
 
@@ -43,17 +44,7 @@ body {
 	border-radius: 10px;
 	padding: 5px 10px;
 	font-size: 30px;
-	background-color: #ffd363;
-	outline: none;
-	color: black;
-	text-decoration: none;
-}
-
-.btn2 {
-	border-radius: 10px;
-	padding: 5px 10px;
-	font-size: 30px;
-	background-color: yellowgreen;
+	background-color: #f7ce6a;
 	outline: none;
 	color: black;
 	text-decoration: none;
