--- a/ps/style.css
+++ b/ps/style.css
@@ -17,6 +17,7 @@ body {
 	align-items: center;
 	width: 100vw;
 	height: 100vh;
+	background: url("bg.jpeg") no-repeat fixed center;
 	background-size: cover;
 }
 
@@ -43,22 +44,11 @@ body {
 	border-radius: 10px;
 	padding: 5px 10px;
 	font-size: 30px;
-	background-color: #ffd363;
+	background-color: #f7ce6a;
 	outline: none;
 	color: black;
 	text-decoration: none;
 }
-
-.btn2 {
-	border-radius: 10px;
-	padding: 5px 10px;
-	font-size: 30px;
-	background-color: yellowgreen;
-	outline: none;
-	color: black;
-	text-decoration: none;
-}
-
 
 .black h1 {
 	color: yellow;
