--- a/ps/style.css
+++ b/ps/style.css
@@ -27,11 +27,10 @@ body {
 }
 
 .black {
-	background-color: black;
+	background-color: white;
 	padding: 10px;
 	text-align: center;
 	border-radius: 20px;
-	box-shadow: 0 0 10px 2px;
 }
 
 .answer {
@@ -41,20 +40,81 @@ body {
 }
 
 .btn {
-	border-radius: 10px;
-	padding: 5px 10px;
-	font-size: 30px;
-	background-color: #f7ce6a;
+	width: 100%;
+	padding: 10px 0;
+	background: #f7ce6a;
+	border: 0;
 	outline: none;
 	color: black;
-	text-decoration: none;
+	font-size: 30px;
+	border-radius: 7px;
+	cursor: pointer;
+	box-shadow: 0 5px 2px rgba(0, 0, 0, 0.2);
 }
 
 .black h1 {
-	color: yellow;
+	color: black;
 }
 
 .black p {
 	font-size: 18px;
+	color: black;
+}
+
+.p2 {
+	font-size: 18px;
 	color: white;
+}
+
+.popup{
+	width: 300px;
+	Background: #ffff;
+	border-radius: 20px;
+	position: absolute;
+	top: 0%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(0.1);
+	text-align: center;
+	padding: 0 30px 30px;
+	color: #333;
+	visibility: hidden;
+	transition: transform 0.25s, top 0.25s;
+
+}
+
+.open-popup{
+	visibility: visible;
+	top: 50%;
+	transform: translate(-50%, -50%) scale(1);
+
+}
+
+
+.popup img{
+	weight: 50px;
+	margin-top: -50px;
+	border-radius: 50%;
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.popup h2{
+	font-size: 25px;
+	font-weight: 500;
+	margin: 30px 0 10px;
+}
+
+.popup button{
+	width: 100%;
+	margin-top: 50px;
+	padding: 10px 0;
+	background: #6fd649;
+	border: 0;
+	outline: none;
+	color: #ffff;
+	font-size: 18px;
+	border-radius: 4px;
+	cursor: pointer;
+	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2);
+	
+
 }
