--- a/cronograma-reduzido-obrigado/style.css
+++ b/cronograma-reduzido-obrigado/style.css
@@ -1,29 +1,11 @@
 @font-face {
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
+	font-family: Gotham Rounded;
 	src: url("font.otf") format("opentype");
-
-}
-
-#header {
-	height: 93px;
-	width: 100%;
-	background: rgb(249, 33, 33);
-	text-align: center;
-}
-
-#main {
-	width: 100%;
-	height: 6000px;
-	background: #f9f9f9;
-	margin-left: 10px;
-	margin-right: 10px;
-	float: left;
 }
 
 *, *::before, *::after {
 	box-sizing: border-box;
+	font-family: Gotham Rounded;
 }
 
 body {
@@ -33,8 +15,19 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: #f9f9f9;
+	width: 100vw;
+	height: 100vh;
+	background: url("bg.jpeg") no-repeat fixed center;
+	background-color: rgba(0, 0, 0, 0.5);
+	background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
+        background-blend-mode: darken;
+}
 
+.container {
+	width: 700px;
+	max-width: 90%;
 }
 
 .black {
@@ -42,55 +35,22 @@ body {
 	padding: 10px;
 	text-align: center;
 	border-radius: 20px;
+	box-shadow: 0 0 10px 2px;
 }
 
-.btn {
-	width: 100%;
-	padding: 10px 0;
-	background: #f3300e;
-	border: 0;
-	outline: none;
+.answer {
+	display: grid;
+	grid-template-columns: repeat(1, auto);
+	gap: 10px;
+}
+
+
+
+.black h1 {
+	color: rgb(0, 255, 34);
+}
+
+.black p {
+	font-size: 18px;
 	color: black;
-	font-size: 30px;
-	border-radius: 7px;
-	cursor: pointer;
-	box-shadow: 0 5px 2px rgba(0, 0, 0, 0.2);
 }
-
-h1 {
-	color: black;
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	font-style: inherit;
-	text-align: center;
-	padding-left: 5%;
-	padding-right: 5%;
-}
-
-p2 {
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	color: rgb(49, 49, 49);
-	font-style: inherit;
-	text-align: center;
-	line-height: 1.5;
-}
-
-p {
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	font-weight: smaller;
-	color: rgb(49, 49, 49);
-	font-style: inherit;
-	font-size:20px;
-	text-align: center;
-	margin: 4%;
-	line-height: 1.5;
-}
-
-h2 {
-	color: white;
-	font-style: normal;
-	font-size:20px;
-	padding-top: 3%;
-	padding-left: 5%;
-	padding-right: 5%;
-}
-
